--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "homepage": "https://github.com/Sphirate/create-element-functional#readme",
   "files": [
     "./index.js"
-  ]
+  ],
+  "peerDependencies": {
+    "react": ">=15.0.0 ^0.14.0"
+  }
 }
