--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
   "files": [
     "./index.js"
   ],
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1"
+  },
   "peerDependencies": {
     "react": ">=15.0.0 ^0.14.0"
   }
