--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JSX `createElement` replacer to use functional React components as functions",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "build": "npm run clean && babel ./src/index.js > ./index.js",
     "clean": "rm -f ./index.js",
     "prepublish": "npm run build"
@@ -41,7 +41,12 @@
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1"
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1",
+    "react": "^16.1.1",
+    "sinon": "^4.1.2"
   },
   "peerDependencies": {
     "react": ">=15.0.0 || ^0.14.0"
